k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-kubernetes-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-kubernetes-demo
  template:
    metadata:
      labels:
        app: laravel-kubernetes-demo
    spec:
      containers:
      - name: laravel-container
        image: fynewily/laravel-kubernetes-demo:latest
        ports:
        - containerPort: 80
